src/test/deca/syntax/parser/invalid/if_cond_empty.deca
// Test parser, if avec une condition vide

{
    if () {
        print(5);
    }
}